--- a/README
+++ b/README
@@ -1,3 +1,7 @@
-ITS-CRM v0.1
-Управление заказами, клиентами, работами/услугами, договорами, счетами, etc...
+ITS-CRM
+Управление заказами, клиентами, работами/услугами, договорами, счетами...
+
+Структура:
+Клиент -> заказы -> договора, счета, счета-фактуры, акты выполненных работ, платежи
+Договора, счета, счета фактуры, акты - настраиваются через шаблоны
 Пишется для небольшой фирмы в сфере оказания услуг в области ИТ
