--- a/README
+++ b/README
@@ -1,7 +1,14 @@
 ITS-CRM
-Управление заказами, клиентами, работами/услугами, договорами, счетами...
+Управление заказами, клиентами, работами/услугами, договорами, счетами и др.
+
+Закончено на ~80%
 
 Структура:
-Клиент -> заказы -> договора, счета, счета-фактуры, акты выполненных работ, платежи
+Клиент -> заказы -> работы/услуги, договора, счета, счета-фактуры, акты выполненных работ, платежи
+
 Договора, счета, счета фактуры, акты - настраиваются через шаблоны
-Пишется для небольшой фирмы в сфере оказания услуг в области ИТ
+Ведется журнал действий пользователей
+Написано на php/Yii. Используются модули User и Rights (со своими тараканами, но, имхо, лучшее - при нежелании изобретать свой велосипед)
+Дамп базы - data/dump.sql
+===
+mindochin@yandex.ru
