--- a/README
+++ b/README
@@ -8,7 +8,7 @@ ITS-CRM
 
 Договора, счета, счета фактуры, акты - настраиваются через шаблоны
 Ведется журнал действий пользователей
-Написано на php/Yii. Используются модули User и Rights (со своими тараканами, но, имхо, лучшее - при нежелании изобретать свой велосипед)
+Написано на php/Yii. Используются модули User и Rights
 Дамп базы - data/dump.sql
-===
-mindochin@yandex.ru
+======
+Email: mindochin@yandex.ru
