--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ITS-CRM
 Управление заказами, клиентами, работами/услугами, договорами, счетами и др.
-
+=====
 Закончено на ~80%
 
 Структура:
@@ -10,5 +10,11 @@ ITS-CRM
 Ведется журнал действий пользователей
 Написано на php/Yii. Используются модули User и Rights
 Дамп базы - data/dump.sql
+
+=====
+Планы на будущее
+*Кабинет клиента
+*Нормальный экспорт в pdf
+
 ======
 Email: mindochin@yandex.ru
