--- a/README
+++ b/README
@@ -8,13 +8,14 @@ ITS-CRM
 
 Договора, счета, счета фактуры, акты - настраиваются через шаблоны
 Ведется журнал действий пользователей
-Написано на php/Yii. Используются модули User и Rights
+PHP framework Yii. Используются модули User и Rights
 Дамп базы - data/dump.sql
 
 =====
 Планы на будущее
-*Кабинет клиента
-*Нормальный экспорт в pdf
+* Кабинет клиента
+* Нормальный экспорт в pdf
+* Файлы для документов
 
 ======
 Email: mindochin@yandex.ru
