--- a/README
+++ b/README
@@ -1,20 +1,19 @@
-ITS-CRM
+ITS-CRM v1(alpha)
 Управление заказами, клиентами, работами/услугами, договорами, счетами и др.
 =====
-Закончено на ~80%
 
 Структура:
 Клиент -> заказы -> работы/услуги, договора, счета, счета-фактуры, акты выполненных работ, платежи
 
-Договора, счета, счета фактуры, акты - настраиваются через шаблоны
+Договора, счета, счета фактуры, акты - настраиваются через html-шаблоны
 Ведется журнал действий пользователей
-PHP framework Yii. Используются модули User и Rights
+PHP&Mysql&Jquery. Framework Yii, используются модули User и Rights
 Дамп базы - data/dump.sql
 
 =====
 Планы на будущее
 * Кабинет клиента
-* Нормальный экспорт в pdf
+* экспорт в pdf
 * Файлы для документов
 
 ======
