--- a/README
+++ b/README
@@ -16,5 +16,7 @@ PHP&Mysql&Jquery. Framework Yii, используются модули User и R
 * экспорт в pdf
 * Файлы для документов
 
+!!!! Проект пока остановлен - другие приоритеты. Прошу пардону :) !!!!
+
 ======
 Email: mindochin@yandex.ru
